# mcp-vision

./: .dockerignore  .gitignore  CLOUD_DEPLOYMENT_GUIDE.md  CONTRIBUTING.md  Dockerfile  GPU_SETUP_GUIDE.md  HTTP_SERVER_SETUP.md  LICENSE  LOCAL_SETUP_GUIDE.md  Makefile  README.md  docker-compose.yml  example-mcp-remote.json  nginx.conf  pyproject.toml  test_batch_processing.py  test_http_mcp.py  test_runner.py
.roo/: mcp.json
src/mcp_vision/: __init__.py  cache.py  core.py  http_server.py  server.py  utils.py
tests/: test_vision.py
