[project]
name = "mcp-vision"
version = "0.1.0"
description = "Allow LLMs to call dedicated specialist CV models"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Groundlight AI" }]
license = { text = "MIT License" }
dependencies = [
    "mcp[cli]>=1.6.0",
    "pillow>=11.2.1",
    "torch>=2.7.0",
    "transformers>=4.51.3",
]

[project.optional-dependencies]
dev = ["ruff>=0.7.3", "pytest>=8.0.0"]

[project.scripts]
mcp-vision = "mcp_vision:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["ruff>=0.7.3", "pytest>=8.0.0"]
