[project]
name = "mcp-vision"
version = "0.1.1"
description = "Allow Easyocr to extract text from images and pdfs"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Utharn Buranasaksee" }]
license = { text = "MIT License" }
dependencies = [
    "mcp[cli]>=1.16.0",
    "pillow>=11.3.0",
    "scipy>=1.16.2",
    "easyocr>=1.7.2",
    "pymupdf>=1.26.4",
    "requests>=2.32.5",
    "fastmcp>=2.12.4",
    "fastapi>=0.118.0",
    "uvicorn[standard]>=0.37.0",
    "pydantic>=2.11.10",
]

[project.optional-dependencies]
dev = ["ruff>=0.7.3", "pytest>=8.0.0", "pytest-asyncio>=0.21.0"]

[project.scripts]
mcp-vision = "mcp_vision:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

